--- a/test/src/main/webapp/index.html
+++ b/test/src/main/webapp/index.html
@@ -2,7 +2,10 @@
 <html>
     <head>
         <title>Start Page</title>
+        <script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
+        <script src="js/jquery-ui-1.8.18.custom.min.js" type="text/javascript"></script>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        
     </head>
     <body>
         <h1>Добро пожаловать!</h1>
